--- a/index.html
+++ b/index.html
@@ -3,31 +3,159 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>flashcards</title>
+    <title>Flashcards</title>
 </head>
 <body>
-   <main>
+  <main>
     <section id="container">
 
 <article class="cartao">
-    <div class="cartao__conteudo">]
-        <h3>programação</h3>
-        <div class=" cartao__conteudo__perguntas">
-             <p>o que é javascript?</p>
+    <div class="cartao__conteudo">
+        <h3>grau</h3>
+        <div class="cartao__conteudo__perguntas">
+            <p>1. O básico para fazer um grau com segurança?</p>
 
         </div>
-       <div class="cartao__conteudo__perguntas">
-        <p>uma linguagem de programação</p>
-       </div>
+        <div class="cartao__conteudo__resposta">
+            <p>Local adequado: Escolha um local amplo, livre de obstáculos e com superfície nivelada, preferencialmente fechado e autorizado para essa prática.
+Moto adequada: Motos com boa resposta do acelerador e suspensão que absorva impactos são mais indicadas para iniciantes.
+Equipamentos de proteção: Capacete, luvas, jaqueta com proteção, calças reforçadas e botas são essenciais.
+Técnica: Aprender a usar o freio traseiro para controlar o grau é crucial.
+Equilíbrio: Buscar o ponto de equilíbrio da moto durante o grau é fundamental para manter o controle.
+Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. </p>
+        </div>
     </div>
-
-    
+   
 </article>
 
-    </section>
-   </main>
+
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <div class="cartao__conteudo__perguntas">
+            <p>Riscos envolvidos?</p>
+
+        </div>
+        <div class="cartao__conteudo__resposta">
+            <p>Perda de controle:
+                Quedas, colisões com obstáculos ou outros veículos:
+                Lesões Fraturas, escoriações, contusões e até mesmo lesões mais graves.
+                Danos à moto Danos na suspensão, carenagem e outras partes. 
+</p>
+        </div>
+    </div>
+   
+</article>
+
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <div class="cartao__conteudo__perguntas">
+            <p>3. É possível fazer grau sem experiência?</p>
+
+        </div>
+        <div class="cartao__conteudo__resposta">
+            <p>Não é recomendado tentar fazer um grau sem experiência prévia.
+                 É importante aprender as técnicas básicas de pilotagem, conhecer
+                a moto e ter controle sobre ela antes de tentar manobras mais avançadas. </p>
+        </div>
+    </div>
+   
+</article>
+
+
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <div class="cartao__conteudo__perguntas">
+            <p>4. Motos adequadas para iniciantes?</p>
+
+        </div>
+        <div class="cartao__conteudo__resposta">
+            <p>Motos com cilindrada moderada (125cc a 250cc).
+               Modelos com suspensão que absorva bem impactos.
+               Motos com boa resposta do acelerador e fácil controle.
+</p>
+        </div>
+    </div>
+   
+</article>
+
+
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <div class="cartao__conteudo__perguntas">
+            <p>5. Como aprender a fazer um grau com segurança?</p>
+
+        </div>
+        <div class="cartao__conteudo__resposta">
+            <p>Aulas: Buscar instrutores experientes que possam ensinar as técnicas corretas.Prática:
+               Começar em baixa velocidade e aumentar gradualmente a altura do grau.Foco no controle:
+               Priorizar o controle da moto e do freio traseiro.Vídeos:
+               Assistir a vídeos educativos para entender as técnicas e os erros comuns. 
+</p>
+        </div>
+    </div>
+   
+</article>
+
+
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <div class="cartao__conteudo__perguntas">
+            <p>o que é JavaScript?</p>
+
+        </div>
+        <div class="cartao__conteudo__resposta">
+            <p>é uma linguagem de programação</p>
+        </div>
+    </div>
+   
+</article>
+
+
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <div class="cartao__conteudo__perguntas">
+            <p>o que é JavaScript?</p>
+
+        </div>
+        <div class="cartao__conteudo__resposta">
+            <p>é uma linguagem de programação</p>
+        </div>
+    </div>
+   
+</article>
+
+
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <div class="cartao__conteudo__perguntas">
+            <p>o que é JavaScript?</p>
+
+        </div>
+        <div class="cartao__conteudo__resposta">
+            <p>é uma linguagem de programação</p>
+        </div>
+    </div>
+   
+</article>
+
+
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <div class="cartao__conteudo__perguntas">
+            <p>o que é JavaScript?</p>
+
+        </div>
+        <div class="cartao__conteudo__resposta">
+            <p>é uma linguagem de programação</p>
+        </div>
+    </div>
+   
+</article>
+
+
+  </main>  
   <footer>
-    <p>projeto desenvouvido pela alura, sem fins lucrativos</p>
+    <p>projeto desenvolvido pela alura, sem fins lucrativos</p>
   </footer>
 </body>
 </html>
