--- a/index.html
+++ b/index.html
@@ -100,11 +100,15 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>o que é JavaScript?</p>
+            <p>6. Equ</p>
 
         </div>
         <div class="cartao__conteudo__resposta">
-            <p>é uma linguagem de programação</p>
+            <p>Capacete: Fundamental para proteger a cabeça em caso de queda.Luvas:
+     Protegem as mãos em caso de contato com o chão. Jaqueta com proteção:
+      Protege o tronco e os braços.Calças reforçadas:
+       Protegem as pernas.Botas: Protegem os pés e tornozelos. 
+</p>
         </div>
     </div>
    
@@ -114,11 +118,15 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>o que é JavaScript?</p>
+            <p>7. Técnicas básicas de controle:</p>
 
         </div>
         <div class="cartao__conteudo__resposta">
-            <p>é uma linguagem de programação</p>
+            <p>Aceleração: Acelere gradualmente para levantar a roda dianteira.Freio traseiro:
+                 Use o freio traseiro para controlar a altura do grau e evitar quedas.Equilíbrio:
+                  Encontre o ponto de equilíbrio da moto durante o grau. Visão:
+                   Mantenha o olhar fixo para frente, onde você quer ir.
+</p>
         </div>
     </div>
    
@@ -128,11 +136,14 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>o que é JavaScript?</p>
+            <p>8. Erros comuns e perigosos ?</p>
 
         </div>
         <div class="cartao__conteudo__resposta">
-            <p>é uma linguagem de programação</p>
+            <p>Aceleração brusca: Pode causar perda de controle e capotamento.Uso excessivo do freio dianteiro:
+             Pode travar a roda e causar queda.Falta de controle do freio traseiro:
+              Pode levar a quedas inesperadas.Não manter o olhar para frente:
+               Pode causar desequilíbrio e acidentes.</p>
         </div>
     </div>
    
@@ -142,11 +153,15 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>o que é JavaScript?</p>
+            <p>9. Grau em vias públicas ?</p>
 
         </div>
         <div class="cartao__conteudo__resposta">
-            <p>é uma linguagem de programação</p>
+            <p>Não é recomendado:
+Fazer grau em vias públicas é perigoso e ilegal, pois coloca em risco a segurança do piloto e de outras pessoas.
+
+Locais autorizados:
+O ideal é praticar em locais fechados e autorizados, como autódromos ou pistas específicas para manobras. </p>
         </div>
     </div>
    
