--- a/index.html
+++ b/index.html
@@ -32,7 +32,10 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>Riscos envolvidos?</p>
+            <p>2. Riscos envolvidos?
+
+
+            </p>
 
         </div>
         <div class="cartao__conteudo__resposta">
@@ -49,7 +52,10 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>3. É possível fazer grau sem experiência?</p>
+            <p>3. É possível fazer grau sem experiência?
+
+
+            </p>
 
         </div>
         <div class="cartao__conteudo__resposta">
@@ -65,7 +71,10 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>4. Motos adequadas para iniciantes?</p>
+            <p>4. Motos adequadas para iniciantes?
+
+
+            </p>
 
         </div>
         <div class="cartao__conteudo__resposta">
@@ -82,7 +91,10 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>5. Como aprender a fazer um grau com segurança?</p>
+            <p>5. Como aprender a fazer um grau com segurança?
+
+
+            </p>
 
         </div>
         <div class="cartao__conteudo__resposta">
@@ -100,7 +112,10 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>6. Equ</p>
+            <p>6. Equipamentos de proteção?
+
+                
+                :</p>
 
         </div>
         <div class="cartao__conteudo__resposta">
@@ -118,7 +133,10 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>7. Técnicas básicas de controle:</p>
+            <p>7. Técnicas básicas de controle?
+
+
+            </p>
 
         </div>
         <div class="cartao__conteudo__resposta">
@@ -136,7 +154,10 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>8. Erros comuns e perigosos ?</p>
+            <p>8. Erros comuns e perigosos ?
+
+
+            </p>
 
         </div>
         <div class="cartao__conteudo__resposta">
@@ -153,7 +174,10 @@ Controle: Pratique a aceleração e o uso do freio traseiro para evitar quedas. 
 <article class="cartao">
     <div class="cartao__conteudo">
         <div class="cartao__conteudo__perguntas">
-            <p>9. Grau em vias públicas ?</p>
+            <p>9. Grau em vias públicas ?
+
+                
+            </p>
 
         </div>
         <div class="cartao__conteudo__resposta">
