--- a/index.html
+++ b/index.html
@@ -190,6 +190,24 @@ O ideal é praticar em locais fechados e autorizados, como autódromos ou pistas
     </div>
    
 </article>
+<article class="cartao">
+    <div class="cartao__conteudo">
+        <div class="cartao__conteudo__perguntas">
+            <p>10.Quanto tempo demora para aprender a empinar uma moto ?
+
+                
+            </p>
+
+        </div>
+        <div class="cartao__conteudo__resposta">
+            <p>Mas quando eles vêm aqui acabam se surpreendendo, pois provamos que é possível aprender a empinar sem cair", relata.
+                 O instrutor explica que em média um aluno chega a fazer de três a quatro aulas para aprender a dar grau,
+                 mas isso pode mudar conforme a habilidade do motociclista. </p>
+        </div>
+    </div>
+   
+</article>
+
 
 
   </main>  
